plugins {
    id 'application'
}

group = 'com.gaia'
version = '0.1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'com.gaia.GaiaMain'
    applicationDefaultJvmArgs = ['-XstartOnFirstThread', '--enable-native-access=ALL-UNNAMED']
}

dependencies {
    implementation project(':engine')
    implementation 'com.google.code.gson:gson:2.10.1'
}